# bare_metal_stm32c011j6

./: .gitignore  CMakeLists.txt  README.md  check_memory.sh  stm32_linker.ld
cmake/: arm-none-eabi.cmake
inc/: main.h  stm32_peripherals.h  tick.h
include/: main.h  stm32c011xx.h
src/: gpio.c  main.c  startup.c  system.c  tick.c  timer.c
tools/: memory_usage.py  memory_usage.sh
